--- a/chitchat/templates/base.html
+++ b/chitchat/templates/base.html
@@ -2,14 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Site{% endblock %}</title>
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
-        html, body {
+        html,
+        body {
             height: 100%;
         }
 
@@ -26,28 +29,40 @@
         }
 
         .footer {
-            background: #f8f9fa; /* Light background for the footer */
+            background: #f8f9fa;
+            /* Light background for the footer */
             padding: 1rem 0;
             text-align: center;
         }
     </style>
 </head>
+
 <body>
     <div class="page-wrapper">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#">Chit Chat</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav me-auto">
+                        {% if user.is_authenticated %}
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'home' %}">Home</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'add_post' %}">Add Post</a>
                         </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'home' %}">Home</a>
+                        </li>
+                        {% endif %}
+
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         {% if user.is_authenticated %}
@@ -58,7 +73,8 @@
                         <li class="nav-item">
                             <form method="POST" action="{% url 'logout' %}" id="logout-form" style="display: inline;">
                                 {% csrf_token %}
-                                <a href="#" class="nav-link" onclick="document.getElementById('logout-form').submit();">Log Out</a>
+                                <a href="#" class="nav-link"
+                                    onclick="document.getElementById('logout-form').submit();">Log Out</a>
                             </form>
                         </li>
 
@@ -66,7 +82,7 @@
                         <li class="nav-item">
                             <a class="nav-link">You are not logged in</a>
                         </li>
-                        
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
@@ -77,7 +93,7 @@
                     </ul>
                 </div>
             </nav>
-            
+
         </header>
 
 
@@ -95,6 +111,9 @@
     </div>
 
     <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
