--- a/templates/base.html
+++ b/templates/base.html
@@ -8,29 +8,8 @@
     <title>{% block title %}My Site{% endblock %}</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        html, body {
-            height: 100%;
-        }
-
-        /* Wrapper for the whole page content */
-        .page-wrapper {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        /* Make the main content flex-grow */
-        .content {
-            flex: 1;
-        }
-
-        .footer {
-            background: #f8f9fa; /* Light background for the footer */
-            padding: 1rem 0;
-            text-align: center;
-        }
-    </style>
+    <!-- Link for Static CSS -->
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <div class="page-wrapper">
