--- a/templates/base.html
+++ b/templates/base.html
@@ -64,15 +64,7 @@
             </ul>
         </div>
     </nav>
-    <main class="content">
-        <header class="container mt-5 d-flex justify-content-center">
-            <div class="row">
-                <div class="col">
-                    <h1 class="display-3">Header test</h1>
-                    <p>Paragraph test</p>
-                </div>
-            </div>
-        </header>
+    <main class="content d-flex justify-content-center align-items-center flex-wrap">
         {% block content %}
         <!-- Page-specific content will go here -->
         {% endblock %}
