--- a/messaging/templates/registration/login.html
+++ b/messaging/templates/registration/login.html
@@ -2,10 +2,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<div class="container mt-5 d-flex justify-content-center" id="add-post">
+    <div class="row">
+        <h2>Login</h2>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Login</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
