--- a/messaging/templates/messaging/add_post.html
+++ b/messaging/templates/messaging/add_post.html
@@ -1,14 +1,13 @@
+<!-- messaging/add_post.html -->
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container mt-4 d-flex justify-content-center" id="add-post">
-    <div class="row">
-        <h2>Add a New Post</h2>
-        <form method=" post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+<div class="container mt-4">
+    <h2>Add Post</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Add Post</button>
+    </form>
 </div>
 {% endblock %}
