--- a/messaging/templates/messaging/edit_comment.html
+++ b/messaging/templates/messaging/edit_comment.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Edit Comment</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Save</button>
-</form>
-<a href="{% url 'home' %}?post_id={{ comment.post.id }}">Cancel</a>
+<div class="container mt-4">
+    <h2>Edit Comment</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn btn-primary">Save changes</button>
+    </form>
+</div>
 {% endblock %}
