--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Chit Chat is a social media platform where you can share your thoughts with the world.">
     <title>{% block title %}CHIT CHAT{% endblock %}</title>
 
     <!-- Link to Favicon -->
